--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <div id="image">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
     <script>
-  $("#").append("hey hey hey hey!!!!!");
+  $("#image").append("hey hey hey hey!!!!!");
 </script>
   </div>
 </body>
