--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,9 @@
   <div id="image">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
     <script>
-  $("#image").prepend('< img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />');
+  $("#image").append('< img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />');
+  
+  $("#theDiv").append("<img id='theImg' src='theImg.png'/>");
 </script>
   </div>
 </body>
