--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <div id="image">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
     <script>
-  $("#div").append("< img src='https://s3.amazonaws.com/learn-verified/painting-with-dog.gif' />");
+  $("#div").append("< img id='image' src='https://s3.amazonaws.com/learn-verified/painting-with-dog.gif' />");
   
   $("#theDiv").append("<img id='theImg' src='theImg.png'/>");
 </script>
